k8s/1.mongo-express-depl.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-depl
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express

          ports:
            - containerPort: 8081

          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-srv
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
