k8s/2.api-auth-depl.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-auth-depl
  labels:
    app: api-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-auth
  template:
    metadata:
      labels:
        app: api-auth
    spec:
      containers:
        - name: api-auth
          # eval $(minikube docker-env)
          # cd to service && docker build -t penkong/vanillanodemongo .
          image: 'penkong/vanillanodemongo:latest'
          imagePullPolicy: Never
          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'
          ports:
            - containerPort: 5002

---
apiVersion: v1
kind: Service
metadata:
  name: api-auth-srv
spec:
  selector:
    app: api-auth
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
